--- a/flipper_frenzy/templates/debug.html
+++ b/flipper_frenzy/templates/debug.html
@@ -33,7 +33,7 @@
         </form>
     </div>
 
-    <div id="copyright"><p>Copyright Zertle 2022</p></div>
+    <div id="copyright"><p>Copyright Zertle 2022 (v0.3.0)</p></div>
 
 </body>
 </html>
