--- a/flipper_frenzy/templates/index.html
+++ b/flipper_frenzy/templates/index.html
@@ -124,7 +124,7 @@
 
     </div>
 
-    <div id="copyright"><p>Copyright Zertle 2022</p></div>
+    <div id="copyright"><p>Copyright Zertle 2022 (v0.3.0)</p></div>
 
 </body>
 </html>
